basic auth working

--- a/package.json
+++ b/package.json
@@ -8,10 +8,14 @@
     "halp": "nodemon app.js"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "body-parser": "^1.14.2",
+    "connect-session-sequelize": "^5.0.0",
     "express": "^4.13.3",
+    "express-session": "^1.15.6",
+    "passport": "^0.3.2",
     "pg": "^5.1.0",
-    "sequelize": "^3.23.3"
+    "sequelize": "^4.3.1"
   },
   "author": "Jakub, Art, Collin",
   "license": "ISC"
