--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "connect-session-sequelize": "^5.0.0",
     "express": "^4.13.3",
     "express-session": "^1.15.6",
+    "geolib": "^2.0.23",
     "passport": "^0.3.2",
     "pg": "^5.1.0",
     "sequelize": "^4.3.1"
