--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "express-session": "^1.15.6",
     "passport": "^0.3.2",
     "pg": "^5.1.0",
-    "sequelize": "^4.3.1"
+    "sequelize": "^4.3.1",
+    "socket.io": "^2.0.3"
   },
   "author": "Jakub, Art, Collin",
   "license": "ISC"
